--- a/hospitalv2/index.html
+++ b/hospitalv2/index.html
@@ -47,31 +47,20 @@
   <!-- Firebase -->
   <script type="module" src="js/fb.js"></script>
   <script type="module">
-    // === Theme toggle
+    // Theme
     const t=document.getElementById('themeToggle');
     if(localStorage.theme){document.documentElement.dataset.theme=localStorage.theme;t.textContent=localStorage.theme==='light'?'🌞':'🌙';}
     t.onclick=()=>{const cur=document.documentElement.dataset.theme||'light';const next=cur==='light'?'dark':'light';document.documentElement.dataset.theme=next;localStorage.theme=next;t.textContent=next==='light'?'🌞':'🌙';};
 
-    // === Clear cache
-    document.getElementById('clearCacheBtn').onclick=async()=>{
-      localStorage.clear();sessionStorage.clear();
-      if('caches' in window){const ks=await caches.keys();await Promise.all(ks.map(k=>caches.delete(k)));}
-      alert('Cache cleared.');location.reload();
-    };
+    // Clear cache
+    clearCacheBtn.onclick=async()=>{localStorage.clear();sessionStorage.clear();if('caches' in window){const ks=await caches.keys();await Promise.all(ks.map(k=>caches.delete(k)));}alert('Cache cleared.');location.reload();};
 
-    // === Firebase System Check
-    async function check(){
-      const el=document.getElementById("syscheck");
-      try{
-        const staff=await DB.listStaff();
-        el.textContent="✅ Firebase connected ("+staff.length+" staff found)";
-        el.style.color="green";
-      }catch(e){
-        el.textContent="❌ Firebase error: "+e.message;
-        el.style.color="red";
-      }
-    }
-    check();
+    // System check
+    (async()=>{
+      const el=document.getElementById('syscheck');
+      try{ const staff=await DB.listStaff(); el.textContent=`✅ Firebase connected (${staff.length} staff)`; el.style.color='green'; }
+      catch(e){ el.textContent=`❌ Firebase error: ${e.message}`; el.style.color='red'; }
+    })();
   </script>
 </body>
 </html>
